# rust_webserver

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2021-02-02-133412_create_users_sessions/: up.sql
src/: lib.rs  main.rs  model.rs  schema.rs
templates/: index.html.tera
